# seqan3

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt
.github/actions/setup-cmake/: README.md  action.yml  package-lock.json  package.json
.github/actions/setup-cmake/src/: setup-cmake.js
.github/actions/setup-doxygen/: action.yml  package-lock.json  package.json
.github/actions/setup-doxygen/src/: setup-doxygen.js
.github/workflows/: ci.yml  documentation.yml  main.yml
build_system/: seqan3-config-version.cmake  seqan3-config.cmake
doc/setup/quickstart_cmake/: index.md
include/seqan3/alphabet/: concept.hpp
include/seqan3/alphabet/aminoacid/: aa20.hpp  aa20.tcc  aa27.hpp  aa27.tcc
include/seqan3/alphabet/gap/: gapped.hpp
include/seqan3/alphabet/nucleotide/: dna15.hpp  dna15.tcc  dna4.hpp  dna4.tcc  dna5.hpp  dna5.tcc  rna15.hpp  rna15.tcc  rna4.hpp  rna4.tcc  rna5.hpp  rna5.tcc
include/seqan3/alphabet/quality/: qualified.hpp
include/seqan3/alphabet/structure/: concept.hpp  dot_bracket3.hpp  dot_bracket3.tcc  dssp9.hpp  dssp9.tcc  structured_aa.hpp  structured_rna.hpp  wuss.hpp  wuss51.tcc
include/seqan3/core/: bit_manipulation.hpp  platform.hpp  seqan3_api.hpp
include/seqan3/core/detail/: customisation_point.hpp  int_types.hpp
include/seqan3/core/metafunction/: range2.hpp  range3.hpp  range4.hpp  range5.hpp  range6.hpp
include/seqan3/core/simd/: concept.hpp  simd_algorithm.hpp  simd_literal.hpp
include/seqan3/executors/: execution.hpp  future.hpp
include/seqan3/io/alignment_file/: format_sam.hpp  input.hpp
include/seqan3/io/sequence_file/: defaults.hpp  format_fasta.hpp  format_fastq.hpp  input.hpp  input_format_concept.hpp
include/seqan3/io/stream/: iterator.hpp
include/seqan3/nio/fastq/: format.hpp
include/seqan3/offload/: buffer_deleter.hpp  contiguous_container.hpp  function.hpp  mpi_backend.hpp  mpi_offload.hpp  sized_buffer_ptr.hpp  target_function.hpp  target_migratable.hpp
include/seqan3/std/: span
offload_example/: .gitignore  CMakeLists.txt  capture  offload_example.cpp  sum_offload.cpp  sum_offload.hpp  sum_offload_simd.cpp  sum_offload_thread.cpp  sum_offload_thread_simd.cpp  sum_serial.cpp  sum_serial.hpp  sum_simd.cpp  sum_simd.hpp  sum_thread.cpp  sum_thread.hpp  sum_thread_simd.cpp  trim.hpp
src/: alphabet.cpp
test/: CMakeLists.txt  seqan3-test.cmake
test/cmake/diagnostics/: list_missing_unit_tests.cmake
test/cmake/include_dependencies/: add_include_dependencies.cmake  generate_include_dependencies.cmake
test/external_project/: CMakeLists.txt  find-package-diagnostics.cmake  install-seqan3.cmake  use-cmake3.4.cmake
test/external_project/seqan3_fetch_content_zip/: CMakeLists.txt
test/external_project/seqan3_installed/: CMakeLists.txt
test/external_project/seqan3_submodule_add_subdirectory/: CMakeLists.txt
test/external_project/seqan3_submodule_find_package/: CMakeLists.txt
test/performance/io/: CMakeLists.txt  format_fasta_benchmark.cpp  format_fasta_benchmark.hpp  format_fasta_benchmark.seqan2_read.cpp  format_fasta_benchmark.seqan2_read.hpp  format_fasta_benchmark.seqan2_write.cpp  format_fasta_benchmark.seqan2_write.hpp  format_fasta_benchmark.seqan3_nio_read.cpp  format_fasta_benchmark.seqan3_read.cpp  format_fasta_benchmark.seqan3_read.hpp  format_fasta_benchmark.seqan3_write.cpp  format_fasta_benchmark.seqan3_write.hpp
test/unit/: CMakeLists.txt
test/unit/offload/: CMakeLists.txt  contiguous_container_test.cpp  gtest_main_mpi.cpp  mpi_backend_test.cpp  mpi_gtest_test.cpp  mpi_offload_executor_test.cpp  mpi_offload_test.cpp  mpi_offload_twoway_executor_test.cpp  mpi_stream_buf.hpp  sized_buffer_ptr_test.cpp  target_function_test.cpp  target_migratable_cereal_types.hpp  target_migratable_std_vector.hpp  target_migratable_test.cpp
(+34 files in other folders)
